@@ -1,3 +1,8 @@
+2004-04-06 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b13
+
+	* New: Added css class 'viewcounter' for those who want the
+	       "viewed XXX times in a special format.
+
 2004-04-06 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b12
 
 	* Bugfix: Added missing ; in watermark_album
